<resources>
    <string name="app_name">My Application</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial A Number</string>
    <string name="move_with_result">Pidah Activity Untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">2000</string>
    <string name="chooce">Pilih</string>
    <string name="data_recaived">Data Diterima</string>
    <string name="object_recaived">Object Diterima</string>
    <string name="this_is_moveativity">Ini MoveActivity</string>
</resources>
