<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveForResultActivity"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_number"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_number"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rg_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50"/>
        <RadioButton
            android:id="@+id/rg_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_100"/>
        <RadioButton
            android:id="@+id/rg_150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_150"/>
        <RadioButton
            android:id="@+id/rg_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_200"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooce"
        android:id="@+id/btn_choose"/>
</LinearLayout>